# data_eval_engine

./: .gitignore  FUTURE_IMPROVEMENTS.md  README.md  pyproject.toml
configs/: default.yaml
epic_prototype/: README.md
epic_prototype/data/: selected_segment.json
epic_prototype/data/mixed_clips/: all_features.csv  all_features.json  clip_metadata.csv  clip_metadata.json
epic_prototype/outputs/: test_clip_features.json
epic_prototype/scripts/: 00_download_epic100_video.py  01_download_sample.py  02_extract_single_clip.py  03_compute_features.py  04_visualize_clip.py  05_extract_mixed_clips.py  06_compute_all_features.py  07_reencode_clips_for_web.py  update_selected_segment.py
human_annotation_tool/: README.md  app.py  requirements.txt
human_annotation_tool/results/: annotations.csv  annotations.json
human_annotation_tool/static/: style.css
human_annotation_tool/templates/: index.html
reward_model/: .gitignore  README.md  TODO.md  requirements.txt
reward_model/configs/: data_config.yaml  feature_config.yaml  model_config.yaml  training_config.yaml
reward_model/scripts/: 01_download_videos.py
scripts/: README_CLOUD_STORAGE.md  download_from_cloud.py  upload_to_cloud.py
src/data_eval_engine/: __init__.py  config.py  data.py  model.py  train.py  utils.py
